# wave-code-generator

./: CLAUDE.md  Cargo.toml  README.md  basic_example.html  custom_test.html  example_wave_codes.html  extracted.txt  final_result.html  from_json.html  from_json_file.html  from_text.html  from_text_file.html  package-lock.json  sample_mixed_input.txt  sample_tracks.json  sample_tracks.txt  spotify_setup.md  wave_codes.html
examples/: advanced_config.rs  basic_usage.rs  from_file.rs
frontend/: README.md  env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/extract-tracks/: route.ts
frontend/src/app/api/generate-html/: route.ts
input/: example.txt
output/: example.html  updated_layout.html
src/: lib.rs  main.rs
